--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -30,7 +30,7 @@
                     android:id="@+id/userName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="Ingrese su usuario"
+                    android:hint="Ingrese su nombre de usuario"
                     android:inputType="textPersonName" />
 
                 <EditText
