luego de agregar item a lista ya redirige

--- a/app/src/main/res/layout/add_product_to_list.xml
+++ b/app/src/main/res/layout/add_product_to_list.xml
@@ -11,11 +11,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="1dp"
             android:layout_weight="0.29"
-            android:background="@android:color/holo_blue_light"
+            android:background="@android:color/white"
             android:orientation="horizontal">
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:gravity="bottom"
                 android:orientation="vertical">
 
