--- a/app/src/main/res/layout/shopping_list_product_view.xml
+++ b/app/src/main/res/layout/shopping_list_product_view.xml
@@ -72,22 +72,23 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.30"
+            android:layout_height="62dp"
+            android:layout_weight="0.15"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
             android:orientation="horizontal">
 
             <Button
                 android:id="@+id/infoTienda"
-                android:layout_width="60dp"
-                android:layout_height="wrap_content"
-                android:text="Más" />
+                android:layout_width="51dp"
+                android:layout_height="50dp"
+                android:background="@drawable/ic_view"/>
+
             <Button
                 android:id="@+id/eliminarProducto"
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/delete"/>
+                android:layout_height="50dp"
+                android:background="@drawable/ic_delete"/>
 
         </LinearLayout>
 
