--- a/app/src/main/res/layout/shoppinglistview.xml
+++ b/app/src/main/res/layout/shoppinglistview.xml
@@ -23,9 +23,9 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="0.30"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
+            android:layout_weight="0.30"
             android:orientation="vertical">
 
             <TextView
@@ -46,28 +46,29 @@
                 android:textSize="14sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
+        <RelativeLayout
+            android:layout_width="209dp"
             android:layout_height="wrap_content"
-            android:layout_weight="0.61"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
 
             <Button
                 android:id="@+id/ver"
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:text="Ver" />
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:background="@drawable/ic_view" />
 
             <Button
                 android:id="@+id/eliminar"
                 android:layout_width="50dp"
-                android:layout_height="wrap_content"
-                android:drawableStart="@drawable/delete" />
+                android:layout_height="40dp"
+                android:layout_toLeftOf="@id/ver"
+                android:background="@drawable/ic_delete" />
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </LinearLayout>
-
 
 
 </android.support.v7.widget.CardView>
