--- a/app/src/main/res/layout/activity_menu_tendero.xml
+++ b/app/src/main/res/layout/activity_menu_tendero.xml
@@ -7,18 +7,16 @@
     tools:context="edu.eci.cosw.cheapestPrice.MenuTenderoActivity">
 
     <LinearLayout
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="8dp">
+        android:orientation="vertical">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
-            android:text="Información de tu Tienda"
+            android:text="@string/informaci_n_de_tu_tienda"
             android:textSize="26dp"
             android:textColor="@color/colorAzul"
             android:textStyle="bold"
