--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -88,7 +88,7 @@
                         android:id="@+id/verMapa"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Verificar dirección"
+                        android:background="@mipmap/ic_map"
                         android:onClick="verMapa"/>
                 </LinearLayout>
                 <LinearLayout
