--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -10,41 +10,42 @@
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/redirect"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:layout_margin="16dp"
         android:clickable="true"
         android:src="@mipmap/ic_logo_round"
         app:backgroundTint="@color/colorPrimary"
         android:layout_gravity="bottom"
+        app:fabSize="mini"
         android:onClick="redirect" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/priceOrder"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:clickable="true"
         android:src="@mipmap/ic_price"
         app:backgroundTint="@color/colorPrimary"
         android:layout_gravity="bottom"
-        app:fabSize="auto"
+        app:fabSize="mini"
         app:layout_anchor="@id/redirect"
         app:layout_anchorGravity="top"
-        android:layout_marginLeft="65dp"
+        android:layout_marginLeft="92dp"
         android:layout_marginTop="0dp"
         android:onClick="orderPrice" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/locationOrder"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
         android:clickable="true"
         android:src="@mipmap/ic_location"
-        app:fabSize="auto"
+        app:fabSize="mini"
         app:backgroundTint="@color/colorPrimary"
         android:layout_gravity="bottom"
         app:layout_anchor="@id/priceOrder"
         app:layout_anchorGravity="top"
-        android:layout_marginLeft="130dp"
+        android:layout_marginLeft="168dp"
         android:layout_marginTop="0dp"
         android:onClick="orderPos" />
 
