--- a/app/src/main/res/layout/activity_shopping_list.xml
+++ b/app/src/main/res/layout/activity_shopping_list.xml
@@ -14,6 +14,7 @@
         android:src="@mipmap/ic_add"
         app:backgroundTint="@color/colorPrimary"
         android:layout_gravity="end|bottom"
+        app:fabSize="normal"
         android:onClick="mas"/>
 
     <ScrollView
