--- a/app/src/main/res/layout/popuptienda.xml
+++ b/app/src/main/res/layout/popuptienda.xml
@@ -14,8 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="1dp"
         android:layout_weight="0.29"
-        android:background="@android:color/holo_blue_light"
-        android:orientation="horizontal">>
+        android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -46,15 +45,15 @@
                 android:textStyle="bold"
                 android:text="Cr 45 #37492 -90" />
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <Button
                     android:id="@+id/verMapa"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:layout_weight="1"
-                    android:text="Ver mapa"
+                    android:background="@mipmap/ic_map"
                     android:onClick="verMapa"/>
             </LinearLayout>
             <LinearLayout
