--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -10,54 +11,56 @@
         android:padding="10dp"
         android:weightSum="1">
 
-    <TextView
-        android:id="@+id/nombreTitulo"
-        android:layout_width="245dp"
-        android:layout_height="wrap_content"
-        android:textSize="32sp"
-        android:text="Lista 1" />
+        <TextView
+            android:id="@+id/nombreTitulo"
+            android:layout_width="245dp"
+            android:layout_height="wrap_content"
+            android:text="Lista 1"
+            android:textSize="32sp" />
 
         <Button
             android:id="@+id/verRuta"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@mipmap/ic_map"/>
+            android:background="@mipmap/ic_map"
+            android:onClick="verRuta" />
     </LinearLayout>
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ShoppingListProductActivity" />
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:id="@+id/mapLinR"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:visibility="gone">
-        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:tools="http://schemas.android.com/tools"
-            android:id="@+id/mapRuta"
-            android:name="com.google.android.gms.maps.SupportMapFragment"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
-            tools:context="edu.eci.cosw.cheapestPrice.PopUpTiendaInfo"
-            android:layout_weight="0.90"
-            />
-    </LinearLayout>
     <ScrollView
         android:id="@+id/ScrollViewProductos"
         android:layout_width="fill_parent"
-        android:layout_height="fill_parent" >
+        android:layout_height="fill_parent">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerViewShoppingListProduct"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="vertical" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:id="@+id/rutaLy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:visibility="gone">
+
+                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+                    xmlns:map="http://schemas.android.com/apk/res-auto"
+                    xmlns:tools="http://schemas.android.com/tools"
+                    android:id="@+id/ruta"
+                    android:name="com.google.android.gms.maps.SupportMapFragment"
+                    android:layout_width="match_parent"
+                    android:layout_height="400dp"
+                    tools:context=".ShoppingListProductActivity"
+                    android:layout_weight="0.90"/>
+            </LinearLayout>
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/recyclerViewShoppingListProduct"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="vertical" />
+        </LinearLayout>
+
     </ScrollView>
 
 </LinearLayout>
