--- a/app/src/main/res/layout/shopping_list_products.xml
+++ b/app/src/main/res/layout/shopping_list_products.xml
@@ -25,6 +25,22 @@
             android:background="@mipmap/ic_map"
             android:onClick="verRuta" />
     </LinearLayout>
+    <LinearLayout
+        android:id="@+id/rutaLy"
+        android:layout_width="wrap_content"
+        android:layout_height="400dp"
+        android:orientation="horizontal"
+        android:visibility="gone">
+
+        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/ruta"
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            tools:context=".ShoppingListProductActivity"
+            android:layout_weight="0.90"/>
+    </LinearLayout>
 
     <ScrollView
         android:id="@+id/ScrollViewProductos"
@@ -33,25 +49,9 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content">
 
-            <LinearLayout
-                android:id="@+id/rutaLy"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:visibility="gone">
 
-                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-                    xmlns:map="http://schemas.android.com/apk/res-auto"
-                    xmlns:tools="http://schemas.android.com/tools"
-                    android:id="@+id/ruta"
-                    android:name="com.google.android.gms.maps.SupportMapFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="400dp"
-                    tools:context=".ShoppingListProductActivity"
-                    android:layout_weight="0.90"/>
-            </LinearLayout>
 
 
             <android.support.v7.widget.RecyclerView
