--- a/app/src/main/res/layout/add_shopping_list.xml
+++ b/app/src/main/res/layout/add_shopping_list.xml
@@ -5,11 +5,11 @@
         android:layout_height="wrap_content"
         android:layout_margin="1dp"
         android:layout_weight="0.5"
-        android:background="@android:color/holo_blue_light"
+        android:background="@android:color/white"
         android:orientation="horizontal">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="280dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
 
